# Watch

./: .gitignore  CMakeLists.txt  README.md  Watch.pro
Client/: Client.pro  main.cpp
Client/HMI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  networkdisplay.cpp  networkdisplay.h  networkdisplay.ui  player.cpp  player.h  player.ui
Client/HMI/Helpers/: customsignalsmediaplayer.cpp  customsignalsmediaplayer.h  uncloseabledock.cpp  uncloseabledock.h
Client/Network/: client.cpp  client.h
Messages/: Messages  Messages.pro  timestamp.cpp
Server/: Server.pro  main.cpp  server.cpp  server.h
certs/: create_client_certificate.sh  create_server_certificate.sh
src/Client/: CMakeLists.txt  Client.pro  main.cpp
src/Client/Global/: global.cpp  global.h
src/Client/HMI/: mainwindow.cpp  mainwindow.cpp.orig  mainwindow.h  mainwindow.ui  networkdisplay.cpp  networkdisplay.cpp.orig  networkdisplay.h  networkdisplay.h.orig  networkdisplay.ui  player.cpp  player.h  player.ui
src/Client/HMI/Convenience/: discreetdock.cpp  discreetdock.h
src/Client/HMI/Helpers/: discreetdock.cpp
src/Client/HMI/Player/: customsignalsmediaplayer.cpp  customsignalsmediaplayer.cpp.orig  customsignalsmediaplayer.h  player.cpp  player.cpp.orig  player.h  player.h.orig  player.ui
src/Client/Helpers/: helpers.cpp  helpers.h
src/Client/Logger/: logger.cpp  logger.h  logger.h.orig
src/Client/Network/: client.cpp  client.h
src/Client/Resources/: resources.qrc
src/Messages/: CMakeLists.txt  Messages.pro  constants.h  hello.cpp  hello.h  message.cpp  message.h  passwordconventions.h  timestamp.cpp  timestamp.h
src/Server/: CMakeLists.txt  Server.pro  main.cpp  password.cpp  password.h  server.cpp  server.h  server.h.orig
src/Server/Logger/: logger.cpp  logger.h
src/Server/Resources/: resources.qrc
